# annie-ai

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/data/: chat_history.json  file_system.hpp  history.hpp  prompt.txt
src/req/: request_api.hpp
